--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Services"
-    url: /services/
+  # - title: "Services"
+  #   url: /services/
 
   # - title: "Talks"
   #   url: /talks/    
