--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Shipei Zeng"
+title                    : "Shipei Zeng (曾诗培)"
 title_separator          : "-"
 name                     : &name "Shipei Zeng"
 description              : &description "SRIBD, CUHK-SZ"
