--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Selected Publications"
+  - title: "Publications"
     url: /publications/
 
   # - title: "Services"
