--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,9 @@ main:
     
   - title: "Research"
     url: /research/
+
+  - title: "Activities"
+    url: /activities/
     
   # - title: "Talks"
   #   url: /talks/    
